--- a/pedido_concluido.html
+++ b/pedido_concluido.html
@@ -72,6 +72,46 @@
         </div>
     </main>
 
+
+    <main class = "main-pedido-concluido">
+        <section class = "pedido">
+            <section class = "conteudo">
+            <article class = "pedido-concluido">
+                <div class = "div-pedido-concluido">
+                    <p> PEDIDO CONCLUÍDO </p>
+                 </div>
+            </article>
+            <article class = "resumo-informacoes-pedido">
+                <div class = "informacoes-pedido">
+                     <div class = "div-informacoes-pedido">
+                        <p> Seu pedido foi realizado com sucesso! </p>
+                    </div>
+                <div class = "resumo-pedido">
+                            <p>Número do pedido: <br>
+                                Total: <br>
+                                Forma de pagamento: Boleto <br>
+                                Endereço de entrega: <br>
+                                <br>
+                                <br>
+                                *Os produtos serão enviados em até 3 dias úteis após a confirmação do pagamento
+                            </p>
+                </div> 
+            </article>
+            <article class = "boleto">
+            <div class = "link-gerar-boleto">
+                    <div class = "btn-gerar-boleto">
+                        <p>
+                            <a href = "#" > GERAR BOLETO </a>
+                        </p>
+                    </div>
+            </div>
+            </article>   
+        </section>
+        </section>
+    </main>
+
+
+
     <footer>
         <div class="div-footer-config">
             <div class="div-informacoes">
