--- a/perfil-usuario.html
+++ b/perfil-usuario.html
@@ -91,13 +91,13 @@
                     <nav class="menu-lateral-area-restrita">                       
                         <ul class="ul-menu-lateral">
                             <li>
-                                <a href="#">
+                                <a href="./perfil-usuario.html">
                                     <span class="material-icons">person</span>
                                     Minha Conta
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="./meus-dados.html">
                                     <span class="material-icons">article</span>
                                     Meus Dados
                                 </a>
