Correção estrutura dos cards.

--- a/login.html
+++ b/login.html
@@ -74,12 +74,12 @@
                             <h4>da topsale6 antes, por favor,</h4>  
                             <h4>inforome seu email e senha.</h4>
                         </div> -->
-                        <form>
+                        <form action="./perfil-usuario.html" motod="POST">
                             <label for="email">E-mail</label>
-                            <input type="email" id="email" name="email" placeholder="email@topsale6.com">
+                            <input type="email" id="email" name="email" placeholder="email@topsale6.com" required>
                             <br>
                             <label for="senha">Senha</label>
-                            <input type="password" name="password" id="password" placeholder="Digite sua senha">
+                            <input type="password" name="password" id="password" placeholder="Digite sua senha" required>
                             <br>
                             <button id="botao-login-entrar" type="submit">Entrar</button>
                             <a id="botao-login-criar_conta" href="./cadastro.html">CRIAR CONTA</a>
